--- a/templates/add_signal.html
+++ b/templates/add_signal.html
@@ -38,8 +38,8 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="threshold">Threshold</label>
-                        <input type="text" class="form-control" id="threshold" name="threshold" placeholder="Enter Threshold" required>
+                        <label for="percent_threshold">Percent Threshold</label>
+                        <input type="text" class="form-control" id="percent_threshold" name="percent_threshold" placeholder="Enter Threshold" required>
                     </div>
                     <button type="submit" class="btn btn-primary">Add Signal</button>
                 </form>
